# encrypted_cache

./: .gitignore  AGENTS.md  README.md  SESSION.md  pyproject.toml
.githooks/: pre-push
doc/: AGENTS-INSTRUCTIONS.md  AGENTS-OVERVIEW.md  AGENTS_api_signatures.txt  encrypted_cache.md
notebooks/: 010_demo_encrypted_cache_1_nolib.ipynb  010_demo_encrypted_cache_2_withlib.ipynb
scripts/: AGENTS_gen_signatures.py  AGENTS_gen_signatures.sh  pre-push-secret-scan.sh
spec/: 000-overview.md  rfeat-010-encrypted_cache.md
src/encrypted_cache/: __init__.py  core.py
tests/: test_rfeat_010_encrypted_cache.py
